data/derived/sp14/progs/unify/prog0556.ml.out
Characters 27-36:
  let _ = assoc(-1, "99999", long_list);;
                             ^^^^^^^^^
Error: This expression has type (int * string) list
       but an expression was expected of type (string * int) list
       Type int is not compatible with type string 
